LCD_GCA901/build/log/idf_py_stdout_output_132224
Command: ninja all
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/lhz/esp/esp32-S3/LCD/build/bootloader/esp-idf/esptool_py && /home/lhz/.espressif/python_env/idf6.0_py3.12_env/bin/python /home/lhz/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/lhz/esp/esp32-S3/LCD/build/bootloader/bootloader.bin
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/lhz/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0-dev-527-gadcbdd7da4-dirty\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/lhz/esp/esp32-S3/LCD/build/config -I/home/lhz/esp/esp-idf/components/newlib/platform_include -I/home/lhz/esp/esp-idf/components/freertos/config/include -I/home/lhz/esp/esp-idf/components/freertos/config/include/freertos -I/home/lhz/esp/esp-idf/components/freertos/config/xtensa/include -I/home/lhz/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/lhz/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/lhz/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/lhz/esp/esp-idf/components/freertos/esp_additions/include -I/home/lhz/esp/esp-idf/components/esp_hw_support/include -I/home/lhz/esp/esp-idf/components/esp_hw_support/include/soc -I/home/lhz/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/lhz/esp/esp-idf/components/esp_hw_support/dma/include -I/home/lhz/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/lhz/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/lhz/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/lhz/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/lhz/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/lhz/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/lhz/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/lhz/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/home/lhz/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/home/lhz/esp/esp-idf/components/heap/include -I/home/lhz/esp/esp-idf/components/heap/tlsf -I/home/lhz/esp/esp-idf/components/log/include -I/home/lhz/esp/esp-idf/components/soc/include -I/home/lhz/esp/esp-idf/components/soc/esp32s3 -I/home/lhz/esp/esp-idf/components/soc/esp32s3/include -I/home/lhz/esp/esp-idf/components/soc/esp32s3/register -I/home/lhz/esp/esp-idf/components/hal/platform_port/include -I/home/lhz/esp/esp-idf/components/hal/esp32s3/include -I/home/lhz/esp/esp-idf/components/hal/include -I/home/lhz/esp/esp-idf/components/esp_rom/include -I/home/lhz/esp/esp-idf/components/esp_rom/esp32s3/include -I/home/lhz/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/home/lhz/esp/esp-idf/components/esp_rom/esp32s3 -I/home/lhz/esp/esp-idf/components/esp_common/include -I/home/lhz/esp/esp-idf/components/esp_system/include -I/home/lhz/esp/esp-idf/components/esp_system/port/soc -I/home/lhz/esp/esp-idf/components/esp_system/port/include/private -I/home/lhz/esp/esp-idf/components/xtensa/esp32s3/include -I/home/lhz/esp/esp-idf/components/xtensa/include -I/home/lhz/esp/esp-idf/components/xtensa/deprecated_include -I/home/lhz/esp/esp-idf/components/spi_flash/include -I/home/lhz/esp/esp32-S3/LCD/managed_components/espressif__esp_lcd_gc9a01/include -I/home/lhz/esp/esp-idf/components/esp_lcd/include -I/home/lhz/esp/esp-idf/components/esp_lcd/interface -I/home/lhz/esp/esp-idf/components/esp_lcd/rgb/include -I/home/lhz/esp/esp-idf/components/driver/deprecated -I/home/lhz/esp/esp-idf/components/driver/i2c/include -I/home/lhz/esp/esp-idf/components/driver/touch_sensor/include -I/home/lhz/esp/esp-idf/components/driver/twai/include -I/home/lhz/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/lhz/esp/esp-idf/components/esp_pm/include -I/home/lhz/esp/esp-idf/components/esp_ringbuf/include -I/home/lhz/esp/esp-idf/components/esp_driver_gpio/include -I/home/lhz/esp/esp-idf/components/esp_driver_pcnt/include -I/home/lhz/esp/esp-idf/components/esp_driver_gptimer/include -I/home/lhz/esp/esp-idf/components/esp_driver_spi/include -I/home/lhz/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/lhz/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/lhz/esp/esp-idf/components/esp_driver_i2s/include -I/home/lhz/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/lhz/esp/esp-idf/components/esp_driver_sdmmc/legacy/include -I/home/lhz/esp/esp-idf/components/esp_driver_sd_intf/include -I/home/lhz/esp/esp-idf/components/sdmmc/include -I/home/lhz/esp/esp-idf/components/esp_driver_sdspi/include -I/home/lhz/esp/esp-idf/components/esp_driver_sdio/include -I/home/lhz/esp/esp-idf/components/esp_driver_dac/include -I/home/lhz/esp/esp-idf/components/esp_driver_rmt/include -I/home/lhz/esp/esp-idf/components/esp_driver_tsens/include -I/home/lhz/esp/esp-idf/components/esp_driver_sdm/include -I/home/lhz/esp/esp-idf/components/esp_driver_i2c/include -I/home/lhz/esp/esp-idf/components/esp_driver_uart/include -I/home/lhz/esp/esp-idf/components/esp_driver_ledc/include -I/home/lhz/esp/esp-idf/components/esp_driver_parlio/include -I/home/lhz/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/lhz/esp/esp-idf/components/esp_driver_twai/include -I/home/lhz/esp/esp32-S3/LCD/managed_components/lvgl__lvgl -I/home/lhz/esp/esp32-S3/LCD/managed_components/lvgl__lvgl/src -I/home/lhz/esp/esp32-S3/LCD/managed_components -I/home/lhz/esp/esp32-S3/LCD/managed_components/lvgl__lvgl/examples -I/home/lhz/esp/esp32-S3/LCD/managed_components/lvgl__lvgl/demos -I/home/lhz/esp/esp-idf/components/esp_timer/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/lhz/esp/esp32-S3/LCD=. -fmacro-prefix-map=/home/lhz/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -DESP_LCD_GC9A01_VER_MAJOR=2 -DESP_LCD_GC9A01_VER_MINOR=0 -DESP_LCD_GC9A01_VER_PATCH=2 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/lhz/esp/esp32-S3/LCD/main/main.c
In file included from /home/lhz/esp/esp32-S3/LCD/managed_components/espressif__esp_lcd_gc9a01/include/esp_lcd_gc9a01.h:13,
                 from /home/lhz/esp/esp32-S3/LCD/main/main.c:16:
/home/lhz/esp/esp-idf/components/esp_hw_support/include/intr_types.h:8:2: warning: #warning "This header is deprecated. Please use esp_intr_types.h instead" [-Wcpp]
    8 | #warning "This header is deprecated. Please use esp_intr_types.h instead"
      |  ^~~~~~~
/home/lhz/esp/esp32-S3/LCD/main/main.c: In function 'gc9a01_lvgl_flush_cb':
/home/lhz/esp/esp32-S3/LCD/main/main.c:120:35: error: 'io_handle' undeclared (first use in this function); did you mean 'xt_handler'?
  120 |         esp_lcd_panel_draw_bitmap(io_handle, offsetx1, offsety1, offsetx2 - offsetx1 + 1, offsety2 - offsety1 + 1, color_p); // 绘制位图
      |                                   ^~~~~~~~~
      |                                   xt_handler
/home/lhz/esp/esp32-S3/LCD/main/main.c:120:35: note: each undeclared identifier is reported only once for each function it appears in
/home/lhz/esp/esp32-S3/LCD/main/main.c:113:32: warning: unused variable 'panel_handle' [-Wunused-variable]
  113 |         esp_lcd_panel_handle_t panel_handle = (esp_lcd_panel_handle_t)disp_drv->user_data; // 获取面板句柄
      |                                ^~~~~~~~~~~~
/home/lhz/esp/esp32-S3/LCD/main/main.c: At top level:
/home/lhz/esp/esp32-S3/LCD/main/main.c:128:13: error: conflicting types for 'lv_task_handler'; have 'void(void *)'
  128 | static void lv_task_handler(void *arg)
      |             ^~~~~~~~~~~~~~~
In file included from /home/lhz/esp/esp32-S3/LCD/managed_components/lvgl__lvgl/lvgl.h:64,
                 from /home/lhz/esp/esp32-S3/LCD/main/main.c:14:
/home/lhz/esp/esp32-S3/LCD/managed_components/lvgl__lvgl/src/lv_api_map.h:35:51: note: previous definition of 'lv_task_handler' with type 'uint32_t(void)' {aka 'long unsigned int(void)'}
   35 | static inline LV_ATTRIBUTE_TIMER_HANDLER uint32_t lv_task_handler(void)
      |                                                   ^~~~~~~~~~~~~~~
/home/lhz/esp/esp32-S3/LCD/main/main.c: In function 'lv_task_handler':
/home/lhz/esp/esp32-S3/LCD/main/main.c:133:34: error: 'EXAMPLE_LVGL_TASK_MAX_DELAY_MS' undeclared (first use in this function)
  133 |         uint32_t task_delay_ms = EXAMPLE_LVGL_TASK_MAX_DELAY_MS;
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/lhz/esp/esp32-S3/LCD/main/main.c:137:25: error: too few arguments to function 'lv_task_handler'
  137 |                         lv_task_handler(); // 处理LVGL任务
      |                         ^~~~~~~~~~~~~~~
/home/lhz/esp/esp32-S3/LCD/main/main.c:128:13: note: declared here
  128 | static void lv_task_handler(void *arg)
      |             ^~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
